--- a/OBAZL.adoc
+++ b/OBAZL.adoc
@@ -1,12 +1,12 @@
-# Building OCaml with OBazl
+= Building OCaml with OBazl
 
-## bootstrapping
+== bootstrapping
 
 We build bytecode compiler and tools only, Ignoring flexdll and docs.
 Targets generate `.depends` are also ignored; all dependencies are
 explicitly enumerated in the BUILD.bazel files.
 
-### make world
+=== make world
 
 .root Makefile
 ```
@@ -33,7 +33,7 @@ NOTE: `compilerlibs` is an empty pseudo-package, just used
 quasi-namespacing; OBazl does not need it. So e.g. the target to build
 `compilerlibs/ocamlmiddleend.cma` is `//middle_end:ocamlmiddleend`
 
-### make coldstart
+=== make coldstart
 
 Builds `runtime/ocamlrun`(Bazel target: `//runtime:ocamlrun`) and stdlib (Bazel: `//stdlib`)
 
@@ -53,12 +53,12 @@ coldstart: $(COLDSTART_DEPS)
 	  OCAMLRUN='$$(ROOTDIR)/runtime/ocamlrun$(EXE)' \
 	  CAMLC='$$(BOOT_OCAMLC) $(USE_RUNTIME_PRIMS)' all
 
-## NB: `make -C runtime all` builds `runtime/ocamlrun` using MKEXE;
-## then `make -C stdlib all` uses `runtime/ocamlrun boot/ocamlc` to build stdlib.
-## later `runtime/ocamlrun` gets copied to `boot/ocamlrun`
+NB: `make -C runtime all` builds `runtime/ocamlrun` using MKEXE;
+then `make -C stdlib all` uses `runtime/ocamlrun boot/ocamlc` to build stdlib.
+later `runtime/ocamlrun` gets copied to `boot/ocamlrun`
 ```
 
-### make coreall
+=== make coreall
 
 `make world` builds `make coldstart` then `make coreall`, which:
 
@@ -118,7 +118,7 @@ MKEXE=$(CC) $(OC_CFLAGS) $(CFLAGS) $(OC_LDFLAGS) $(LDFLAGS) -Wl,-no_compact_unwi
 
 `OC_CFLAGS` etc. - see `config/BUILD.bzl`
 
-### make runtime
+=== make runtime
 
 .runtime/Makefile (make -C runtime all)
 ```
@@ -167,7 +167,7 @@ sak$(EXE): sak.$(O)
 
 ```
 
-### make -C tools all
+=== make -C tools all
 
 all: $(programs_byte)
 
@@ -177,7 +177,7 @@ programs_byte := \
   primreq stripdebug cmpbyt
 
 
-### make ocaml
+=== make ocaml
 
 `ocaml` is the command to start a repl. The makefiles make it a
 root-level target; OBazl puts it in the `toplevel` package, so the
@@ -185,7 +185,7 @@ build command is `bazel build toplevel:ocaml`
 
 
 
-##  Corresponding OBazl build targets:
+==  Corresponding OBazl build targets:
 
 * `build_config.h` => `//runtime:build_config_h` (`genrule`)
 * `ld.conf`- not needed for Bazel bootstrapping, only for deployment? STUBLIBDIR (ocaml/stublibs) to contain `dll*.so` files from `otherlibs`
@@ -206,7 +206,7 @@ For root targets like `make ocamlc` we use a pseudo-package
 * `make library`
 
 
-## structuring
+== structuring
 
 Its easy to make the OBazl build structure mimic the Makefile-based
 structure more-or-less exactly. But where's the fun in that? OBazl's
@@ -227,7 +227,7 @@ to `//toplevel`. Or `toplevel.archive`, or any other legal Bazel name.
 
 Since `expunge` is a utility, we put it in utils: `//utils:expunge`
 
-## Inspecting build cmds
+== Inspecting build cmds
 
 To see the generated command that Bazel will run, use `aquery`. This
 will print the command (and the list of inputs and outputs) without
@@ -237,7 +237,7 @@ Archives: to see what's directly included via the command line, use
 `aquery` as above. To see what actually gets included (i.e. the deps
 as well), run the build and pass `--output_groups=manifest`.
 
-## Stdlib
+== Stdlib
 
 An interesting feature of OBazl is that we can depend on individual
 submodules in a namespace. For example, `utils/config.ml` depends on
@@ -249,15 +249,15 @@ modules. (This is because depending on a namespaced module
 automatically injects the needed dependency on the namespace's
 resolver (mapping) module.)
 
-## Preprocessing
+== Preprocessing
 
-### utils/config.ml
+=== utils/config.ml
 
 Uses a custom rule demonstrating use of Bazel's built-in templating support.
 
 Data is hard-coded.
 
-### utils/domainstate.ml
+===  utils/domainstate.ml
 
 The Makefile uses CPP to generate `utils/domainstate.ml` from
 `utils/domainstate.ml.c` and `runtime/caml/domain_state.tbl` Nutty.
